--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,9 +17,14 @@ permissions:
   contents: read
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
+  gradle:
+    strategy:
+      matrix:
+        os:[ubuntu-latest,macos-latest,windows-latest]
+        jdk:[8,11,17]
+      runs-on:${{matrix.os}}
+      env:
+        JDK_VERSION:${{matrix.jdk}}
 
     steps:
     - uses: actions/checkout@v3
